--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
- 
-     
+            "app/Helpers/helpers.php"
+
         ]
     },
     "autoload-dev": {
